--- a/code/backend/RentalNinja/cf-template.yaml
+++ b/code/backend/RentalNinja/cf-template.yaml
@@ -13,6 +13,10 @@ Parameters:
     Type: String
     Description: ECR Image URI for UploadPost Lambda
 
+  DeletePostImg:
+    Type: String
+    Description: ECR Image URI for DeletePost Lambda
+
   CognitoArn:
       Type: String
       Description: cog-arn
@@ -104,6 +108,19 @@ Resources:
       MemorySize: 128
       Timeout: 15
 
+  DeletePost:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: delete-post
+      PackageType: Image
+      Code:
+        ImageUri: !Ref DeletePostImg
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Architectures:
+        - x86_64
+      MemorySize: 128
+      Timeout: 15
+
 
   # Lambda Execution Role
   LambdaExecutionRole:
@@ -152,6 +169,7 @@ Resources:
       - GetPresignedUrl
       - GetPostDetail
       - UploadPost
+      - DeletePost
 
   # Cognito Authorizer in API Gateway
   CognitoAuthorizer:
@@ -171,6 +189,7 @@ Resources:
       - GetPresignedUrlMethod   # Ensure methods are created before deployment
       - GetPresignedOptionsMethod
       - UploadPostMethod
+      - DeletePostMethod
     Properties:
       RestApiId: !Ref ApiGatewayRestApi
       StageName: test-cf
@@ -198,6 +217,14 @@ Resources:
     Properties:
       ParentId: !GetAtt ApiGatewayRestApi.RootResourceId
       PathPart: upload-post
+      RestApiId: !Ref ApiGatewayRestApi
+
+  # API Gateway Resource for Upload Post API
+  DeletePostResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !GetAtt ApiGatewayRestApi.RootResourceId
+      PathPart: delete-post
       RestApiId: !Ref ApiGatewayRestApi
 
 ### Function1
@@ -370,6 +397,64 @@ Resources:
     Type: AWS::Lambda::Permission
     Properties:
       FunctionName: !Ref UploadPost
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/upload-post
+
+
+### Function 4
+  # API Gateway Method for Upload Post API
+  DeletePostMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: COGNITO_USER_POOLS
+      AuthorizerId: !Ref CognitoAuthorizer
+      ResourceId: !Ref DeletePostResource
+      RestApiId: !Ref ApiGatewayRestApi
+      HttpMethod: POST
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeletePost.Arn}/invocations
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+
+  # OPTIONS Method for CORS
+  DeletePostOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: NONE
+      ResourceId: !Ref DeletePostResource
+      RestApiId: !Ref ApiGatewayRestApi
+      HttpMethod: OPTIONS
+      Integration:
+        Type: MOCK
+        RequestTemplates:
+          application/json: '{ "statusCode": 200 }'
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+
+
+  # Lambda Permissions for API Gateway to Invoke Lambda
+  DeletePostPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref DeletePost
       Action: lambda:InvokeFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/upload-post
