deploy delete function

--- a/code/backend/RentalNinja/cf-template.yaml
+++ b/code/backend/RentalNinja/cf-template.yaml
@@ -457,4 +457,4 @@ Resources:
       FunctionName: !Ref DeletePost
       Action: lambda:InvokeFunction
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/upload-post
+      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/delete-post
