--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -1,7 +1,7 @@
 name: AWS Lambda CI/CD
 on:
   push:
-    branches: [backend-dev]
+    branches: [main]
 jobs:
   build-and-deploy:
     permissions:
