added get my list funtion

--- a/code/backend/RentalNinja/cf-template.yaml
+++ b/code/backend/RentalNinja/cf-template.yaml
@@ -17,9 +17,13 @@ Parameters:
     Type: String
     Description: ECR Image URI for DeletePost Lambda
 
+  GetPostListImg:
+    Type: String
+    Description: ECR Image URI for DeletePost Lambda
+
   CognitoArn:
-      Type: String
-      Description: cog-arn
+    Type: String
+    Description: cog-arn
 
 Resources:
   # S3 Bucket
@@ -51,7 +55,7 @@ Resources:
               - arn:aws:s3:::rentalninjia-test/*
 
 
-######
+  ######
   # DynamoDB Table
   PostTable:
     Type: AWS::DynamoDB::Table
@@ -64,7 +68,7 @@ Resources:
         - AttributeName: post_id_test
           KeyType: HASH
       BillingMode: PAY_PER_REQUEST
-######
+  ######
 
 
 
@@ -121,6 +125,19 @@ Resources:
       MemorySize: 128
       Timeout: 15
 
+  GetPostList:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: get-post-list
+      PackageType: Image
+      Code:
+        ImageUri: !Ref GetPostListImg
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Architectures:
+        - x86_64
+      MemorySize: 128
+      Timeout: 15
+
 
   # Lambda Execution Role
   LambdaExecutionRole:
@@ -156,7 +173,7 @@ Resources:
                 Resource:
                   - arn:aws:s3:::rentalninjia-test/*
 
-######
+  ######
   # API Gateway
   ApiGatewayRestApi:
     Type: AWS::ApiGateway::RestApi
@@ -195,6 +212,8 @@ Resources:
       - UploadPostOptionsMethod
       - DeletePostMethod
       - DeletePostOptionsMethod
+      - GetPostListMethod
+      - GetPostListOptionsMethod
     Properties:
       RestApiId: !Ref ApiGatewayRestApi
       StageName: test-cf
@@ -240,7 +259,7 @@ Resources:
       PathPart: get-post-list
       RestApiId: !Ref ApiGatewayRestApi
 
-### Function1
+  ### Function1
 
   # API Gateway Method for Get Post Detail API
   GetPresignedUrlMethod:
@@ -299,7 +318,7 @@ Resources:
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/get-presigned-url
 
 
-### Function2
+  ### Function2
 
   # API Gateway Method for Get Post Detail API
   GetPostDetailMethod:
@@ -357,7 +376,7 @@ Resources:
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/get-post-detail
 
-### Function 3
+  ### Function 3
   # API Gateway Method for Upload Post API
   UploadPostMethod:
     Type: AWS::ApiGateway::Method
@@ -415,8 +434,8 @@ Resources:
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/upload-post
 
 
-### Function 4
-  # API Gateway Method for Upload Post API
+  ### Function 4
+  # API Gateway Method for Delete Post API
   DeletePostMethod:
     Type: AWS::ApiGateway::Method
     Properties:
@@ -471,3 +490,60 @@ Resources:
       Action: lambda:InvokeFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/delete-post
+
+  ### Function 5
+  # API Gateway Method for Get Post List API
+  GetPostListMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: COGNITO_USER_POOLS
+      AuthorizerId: !Ref CognitoAuthorizer
+      ResourceId: !Ref GetPostListResource
+      RestApiId: !Ref ApiGatewayRestApi
+      HttpMethod: POST
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetPostList.Arn}/invocations
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+
+  # OPTIONS Method for CORS
+  GetPostListOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: NONE
+      ResourceId: !Ref GetPostListResource
+      RestApiId: !Ref ApiGatewayRestApi
+      HttpMethod: OPTIONS
+      Integration:
+        Type: MOCK
+        RequestTemplates:
+          application/json: '{ "statusCode": 200 }'
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization'"
+              method.response.header.Access-Control-Allow-Methods: "'OPTIONS,POST'"
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+
+
+  # Lambda Permissions for API Gateway to Invoke Lambda
+  GetPostListPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref GetPostList
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ApiGatewayRestApi}/*/POST/get-post-list
