--- a/code/frontend/rental/package.json
+++ b/code/frontend/rental/package.json
@@ -13,6 +13,8 @@
     "@fawmi/vue-google-maps": "^0.9.79",
     "aws-amplify": "^6.6.0",
     "core-js": "^3.8.3",
+    "http-proxy-middleware": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "ol": "^10.1.0",
     "vue": "^3.2.13",
