--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -122,6 +122,37 @@ jobs:
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
           echo "IMAGE=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+          
+
+      - name: Build AddCollection Lambda function and push to ecr
+        id: build-image-add-collection
+        working-directory: code/backend/RentalNinja/AddCollection
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: rentalninja/add_collection
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          mvn compile dependency:copy-dependencies -DincludeScope=runtime
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "IMAGE=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+
+      - name: Build GetCollectionList Lambda function and push to ecr
+        id: build-image-get-collection
+        working-directory: code/backend/RentalNinja/GetCollectionList
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: rentalninja/get_collection_list
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          mvn compile dependency:copy-dependencies -DincludeScope=runtime
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          echo "IMAGE=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+
+  
+  
+  
 
       - name: Deploy to AWS CloudFormation
         uses: aws-actions/aws-cloudformation-github-deploy@v1
@@ -137,6 +168,8 @@ jobs:
             GetPostListImg=${{ steps.build-image-get-post-list.outputs.IMAGE }},
             GetMyListImg=${{ steps.build-image-get-my-list.outputs.IMAGE }},
             UpdateMyPostImg=${{ steps.build-image-update-my-post.outputs.IMAGE }},
+            AddCollectionImg=${{ steps.build-image-add-collection.outputs.IMAGE }},
+            GetCollectionListImg=${{ steps.build-image-get-collection.outputs.IMAGE }},
             CognitoArn=arn:aws:cognito-idp:us-east-2:730335295917:userpool/us-east-2_0zgg97WG0
           capabilities: CAPABILITY_NAMED_IAM
 
