--- a/code/frontend/rental/package.json
+++ b/code/frontend/rental/package.json
@@ -13,6 +13,7 @@
     "@fawmi/vue-google-maps": "^0.9.79",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "aws-amplify": "^6.6.0",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "http-proxy-middleware": "^3.0.2",
     "jwt-decode": "^4.0.0",
