--- a/code/backend/RentalNinja/UploadPost/pom.xml
+++ b/code/backend/RentalNinja/UploadPost/pom.xml
@@ -32,51 +32,18 @@
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.2.3</version>
     </dependency>
-
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.1</version>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.3</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.8.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Mockito for mocking dependencies -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>4.5.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!--    <dependency>-->
-<!--      <groupId>org.mockito</groupId>-->
-<!--      <artifactId>mockito-core</artifactId>-->
-<!--      <version>4.5.1</version>-->
-<!--      <scope>test</scope>-->
-<!--    </dependency>-->
-
-
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-lambda-java-tests</artifactId>
-      <version>1.0.0</version>
-      <scope>test</scope>
-    </dependency>
-
-
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-dynamodb</artifactId>
       <version>1.12.771</version>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
